fixing footer spacing

--- a/wp_data/wp-content/themes/goodjelly2025/style.css
+++ b/wp_data/wp-content/themes/goodjelly2025/style.css
@@ -23,6 +23,10 @@
   }
 }
 
+footer {
+  margin-block-start: 0 !important;
+}
+
 /* Nav */
 
 .topnav-button a {
